# my-lost-and-found-code-repository

./: .gitignore  binary-string-add.py  cartesian_tree.py  check-missing-binary.py  check-set-add-to-value.py  ford_fulk_edmo_karp.py  get_sucessor.py  hamming_codification.py  horners-rule.py  huffman_encoding.py  minimum_edit_distance.py  minkowski-distance.py  minkowski_distance.py  proj_point_to_line.py  segment_tree.py  shunting-yard.py  shunting_yard.py  sort_stack.py  text-entropy.py  text_entropy.py  tf_idf.py  topological_sort.py  trie.py  uniform_path_sampling.py  union_find.py  utf8_decoder.py
approx_algorithms/: approx_vertex_cover.py  greedy_set_cover.py  randomized_max_3_cnf.py
binary_or_bitwise/: bin_to_grey_code.py
data_structures/: segment_tree.py
floating-point-related/: ieee754conv.py
floating_point_related/: ieee754conv.py
fourier/: apply_filter_fft.py  dft.py  draw_coeffs.py  fourier_approx.py  fourier_series_approx.py  polynomial_mult.py  spectral_derivative.py  spectrogram.py
geometry/: _utils.py  clockwise_check.py  convex_comb.py  function_projection.py  gram_schmidt.py  gram_schmidt_orthomalization.py  qr_decomposition.py  seg_intersec_point.py  vector_projection.py
geometry-and-alg-lin/: gram_schmidt.py  plu_decomposition.py
geometry_and_alg_lin/: rref.py  (+9 more)
web/mermaid_online_rendering/: Makefile  README.md  app.py  config.json  index.html  pyproject.toml  style.css
web/mermaid_online_rendering/scripts/: main.js
web/mermaid_online_rendering/static/: index.html  style.css
web/mermaid_online_rendering/static/scripts/: main.js
(+71 files in other folders)
